--- a/index.html
+++ b/index.html
@@ -68,22 +68,24 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
 .solver.active{display:block}
 .landing.hidden{display:none}
 
-.topbar{display:flex;align-items:center;justify-content:space-between;margin-bottom:1rem;flex-wrap:wrap;gap:.8rem;animation:fadeDown .5s ease-out}
-.topbar-left{display:flex;align-items:center;gap:1rem}
-.topbar-brand{font-family:'JetBrains Mono',monospace;font-size:.75rem;font-weight:600;color:var(--accent);letter-spacing:.06em;cursor:pointer;transition:opacity .2s}
+.topbar{display:flex;align-items:center;justify-content:space-between;margin-bottom:1rem;flex-wrap:wrap;gap:.6rem;animation:fadeDown .5s ease-out;padding:.6rem .8rem;background:var(--bg-card);border:1px solid var(--border);border-radius:12px}
+.topbar-left{display:flex;align-items:center;gap:.8rem}
+.topbar-brand{font-family:'JetBrains Mono',monospace;font-size:.72rem;font-weight:600;color:var(--accent);letter-spacing:.06em;cursor:pointer;transition:opacity .2s}
 .topbar-brand:hover{opacity:.7}
-.topbar-event{font-size:.82rem;color:var(--text-secondary)}
+.topbar-event{font-size:.72rem;color:var(--text-muted);max-width:180px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.topbar-center{display:flex;align-items:center;gap:.8rem;flex-wrap:wrap}
 .topbar-right{display:flex;align-items:center;gap:.6rem}
-.topbar-badge{font-family:'JetBrains Mono',monospace;font-size:.62rem;padding:.3rem .7rem;border-radius:6px;background:rgba(34,211,238,0.08);border:1px solid rgba(34,211,238,0.15);color:var(--accent);letter-spacing:.04em}
+.topbar-badge{font-family:'JetBrains Mono',monospace;font-size:.58rem;padding:.25rem .5rem;border-radius:5px;background:rgba(34,211,238,0.08);border:1px solid rgba(34,211,238,0.15);color:var(--accent);letter-spacing:.04em}
+.ctrl-label{font-family:'JetBrains Mono',monospace;font-size:.52rem;color:var(--text-muted);text-transform:uppercase;letter-spacing:.1em;white-space:nowrap}
+.seg-group{display:flex;align-items:center;gap:.35rem}
+.seg-btns{display:flex;background:var(--bg-deep);border-radius:6px;padding:2px;border:1px solid var(--border);overflow:hidden}
+.seg-btn{font-family:'JetBrains Mono',monospace;font-size:.6rem;padding:.28rem .5rem;color:var(--text-muted);cursor:pointer;transition:all .2s;white-space:nowrap;user-select:none;border-radius:4px;text-align:center}
+.seg-btn:hover{color:var(--text-secondary)}
+.seg-btn.active{background:var(--bg-hover);color:var(--text-primary)}
+.topbar-divider{width:1px;height:20px;background:var(--border);margin:0 .1rem}
+@media(max-width:720px){.topbar{flex-direction:column;align-items:stretch;gap:.5rem}.topbar-center{justify-content:center}.topbar-right{justify-content:flex-end}}
 
-.controls{display:flex;flex-wrap:wrap;gap:.6rem;align-items:center;margin-bottom:1rem;padding:.8rem 1rem;background:var(--bg-card);border:1px solid var(--border);border-radius:12px;animation:fadeUp .5s ease-out .15s both}
-.ctrl-group{display:flex;align-items:center;gap:.4rem}
-.ctrl-label{font-family:'JetBrains Mono',monospace;font-size:.58rem;color:var(--text-muted);text-transform:uppercase;letter-spacing:.1em;margin-right:.2rem;white-space:nowrap}
-.ctrl-select{background:var(--bg-cell);border:1px solid var(--border);color:var(--text-primary);font-family:'JetBrains Mono',monospace;font-size:.72rem;padding:.35rem .6rem;border-radius:6px;cursor:pointer;transition:border-color .2s;appearance:none;-webkit-appearance:none;background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='6'%3E%3Cpath d='M0 0l5 6 5-6z' fill='%2364748b'/%3E%3C/svg%3E");background-repeat:no-repeat;background-position:right 8px center;padding-right:24px}
-.ctrl-select:hover{border-color:var(--border-light)}
-.ctrl-select:focus{outline:none;border-color:var(--accent)}
-.ctrl-divider{width:1px;height:24px;background:var(--border);margin:0 .3rem}
-
+.blocked-bar{display:flex;align-items:center;gap:.5rem;padding:.4rem .6rem;margin-bottom:.5rem;flex-wrap:wrap}
 .blocked-list{display:flex;flex-wrap:wrap;gap:3px;align-items:center}
 .blocked-chip{font-family:'JetBrains Mono',monospace;font-size:.55rem;padding:2px 6px;border-radius:4px;background:rgba(239,68,68,0.1);color:#ef4444;border:1px solid rgba(239,68,68,0.2);display:flex;align-items:center;gap:3px;cursor:pointer;transition:all .2s}
 .blocked-chip:hover{background:rgba(239,68,68,0.2)}
@@ -263,37 +265,29 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
       <div class="topbar-brand" onclick="goHome()">WHEN2SOLVE</div>
       <div class="topbar-event" id="eventInfo"></div>
     </div>
+    <div class="topbar-center">
+      <div class="seg-group">
+        <span class="ctrl-label">Duration</span>
+        <div class="seg-btns" id="ctrlDuration">
+          <div class="seg-btn" data-val="2">30m</div>
+          <div class="seg-btn" data-val="3">45m</div>
+          <div class="seg-btn active" data-val="4">1h</div>
+          <div class="seg-btn" data-val="5">1¼h</div>
+          <div class="seg-btn" data-val="6">1½h</div>
+        </div>
+      </div>
+      <div class="topbar-divider"></div>
+      <div class="seg-group">
+        <span class="ctrl-label">Meetings</span>
+        <div class="seg-btns" id="ctrlMeetings">
+          <div class="seg-btn active" data-val="0">Auto</div>
+          <div class="seg-btn" data-val="1">1</div>
+          <div class="seg-btn" data-val="2">2</div>
+        </div>
+      </div>
+    </div>
     <div class="topbar-right">
       <div class="topbar-badge" id="participantBadge"></div>
-    </div>
-  </div>
-
-  <div class="controls" id="controls">
-    <div class="ctrl-group">
-      <span class="ctrl-label">Duration</span>
-      <select class="ctrl-select" id="ctrlDuration" onchange="onConstraintChange()">
-        <option value="2">30 min</option>
-        <option value="3">45 min</option>
-        <option value="4" selected>1 hr</option>
-        <option value="5">1.25 hr</option>
-        <option value="6">1.5 hr</option>
-      </select>
-    </div>
-    <div class="ctrl-divider"></div>
-    <div class="ctrl-group">
-      <span class="ctrl-label">Meetings</span>
-      <select class="ctrl-select" id="ctrlMeetings" onchange="onConstraintChange()">
-        <option value="0">Auto</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-      </select>
-    </div>
-    <div class="ctrl-divider"></div>
-    <div class="ctrl-group">
-      <span class="ctrl-label">Blocked</span>
-      <div class="blocked-list" id="blockedList">
-        <span style="font-size:.6rem;color:var(--text-muted)">Shift+click heatmap</span>
-      </div>
     </div>
   </div>
 
@@ -302,6 +296,12 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
 
   <div class="heatmap-toggle" id="heatmapToggle" onclick="toggleHeatmap()">&#9656; Explore raw availability</div>
   <div class="heatmap-section collapsed" id="heatmapSection">
+    <div class="blocked-bar" id="blockedBar">
+      <span class="ctrl-label">Blocked</span>
+      <div class="blocked-list" id="blockedList">
+        <span style="font-size:.6rem;color:var(--text-muted)">Shift+click cells below</span>
+      </div>
+    </div>
     <div class="heatmap-inner">
       <div class="heatmap-panel">
         <div class="heatmap-wrapper" id="heatmapWrapper">
@@ -476,8 +476,8 @@ function windowsOverlap(a, b) {
 }
 
 function solve() {
-  const duration = parseInt(document.getElementById('ctrlDuration').value);
-  const meetingsPref = parseInt(document.getElementById('ctrlMeetings').value);
+  const duration = parseInt(document.getElementById('ctrlDuration').querySelector('.seg-btn.active').dataset.val);
+  const meetingsPref = parseInt(document.getElementById('ctrlMeetings').querySelector('.seg-btn.active').dataset.val);
   const required = STATE.required;
   const blocked = STATE.blocked;
   const allNames = new Set(STATE.names);
@@ -1170,7 +1170,7 @@ function drawOutline(win, label) {
   const grid = document.getElementById('grid');
   const di = STATE.days.indexOf(win.dayKey);
   const ti = STATE.timeLabels.findIndex(t => t.h === win.startH && t.m === win.startM);
-  const dur = parseInt(document.getElementById('ctrlDuration').value);
+  const dur = parseInt(document.getElementById('ctrlDuration').querySelector('.seg-btn.active').dataset.val);
   const tiEnd = ti + dur - 1;
 
   const firstCell = grid.querySelector(`.cell[data-di="${di}"][data-ti="${ti}"]`);
@@ -1266,7 +1266,7 @@ function onCellClick(e) {
 function renderBlockedList() {
   const el = document.getElementById('blockedList');
   if (STATE.blocked.size === 0) {
-    el.innerHTML = '<span style="font-size:.6rem;color:var(--text-muted)">Shift+click cells</span>';
+    el.innerHTML = '<span style="font-size:.6rem;color:var(--text-muted)">Shift+click cells below</span>';
     return;
   }
   el.innerHTML = '';
@@ -1336,6 +1336,17 @@ function toggleRequired(name) {
 function onConstraintChange() {
   updateSolutions();
 }
+
+// Segmented button click handlers
+document.querySelectorAll('.seg-btns').forEach(group => {
+  group.querySelectorAll('.seg-btn').forEach(btn => {
+    btn.addEventListener('click', () => {
+      group.querySelectorAll('.seg-btn').forEach(b => b.classList.remove('active'));
+      btn.classList.add('active');
+      onConstraintChange();
+    });
+  });
+});
 
 function goHome() {
   location.hash = '';
