Add 15m and 2h duration options

--- a/index.html
+++ b/index.html
@@ -269,11 +269,13 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
       <div class="seg-group">
         <span class="ctrl-label">Duration</span>
         <div class="seg-btns" id="ctrlDuration">
+          <div class="seg-btn" data-val="1">15m</div>
           <div class="seg-btn" data-val="2">30m</div>
           <div class="seg-btn" data-val="3">45m</div>
           <div class="seg-btn active" data-val="4">1h</div>
           <div class="seg-btn" data-val="5">1¼h</div>
           <div class="seg-btn" data-val="6">1½h</div>
+          <div class="seg-btn" data-val="8">2h</div>
         </div>
       </div>
       <div class="topbar-divider"></div>
